--- a/LAB_4/6131_PavlovVI_lab_4_forest.ipynb
+++ b/LAB_4/6131_PavlovVI_lab_4_forest.ipynb
@@ -1697,7 +1697,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### После фильтрации признаков, значение метрик ухудшилось, но не значительно "
+    "#### После фильтрации признаков, значение метрики Precision улучшилось"
    ]
   },
   {
